--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
       hibernate:
         format_sql: true
         highlight_sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
 logging:
   level:
     org:
